cabal-version:      3.0
name:               servant-router
version:            0.1.0.0
synopsis:           A router for servant
description:        This is a client-side router that can be used with servant and miso
homepage:           https://github.com/haskell-miso/servant-router
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          dmjio (c) 2025
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:
    warnings
  exposed-modules:
    Servant.Router
  build-depends:
    base < 5,
    bytestring,
    http-api-data,
    http-types,
    network-uri,
    servant > 0.18 && < 0.21,
    text,
    miso >= 1.9 && < 1.10
  hs-source-dirs:
    src
  default-language:
    Haskell2010
